cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_32.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:101: error: DEAD_STORE
  The value written to &inW0 (type unsigned int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:101:5: Write of unused value
99.       }
100.       tin0 = tin1 = tout0 = tout1 = xor0 = xor1 = 0;
101.       inW0 = inW1 = outW0 = outW1 = 0;
           ^
102.       tin[0] = tin[1] = 0;
103.   }
